tests/reject/rule_without_end.alg
rule r(A : Prop)
  ─────
  ⊢ A
